# card-match

./: README.md
card-match/: CMakeLists.txt  button.cpp  button.h  card.cpp  card.h  cardbutton.cpp  cardbutton.h  cards.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
